c2rust-transpile/tests/snapshots/snapshots__transpile@scalar_init.c.2021.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/scalar_init.2021.rs
---
#![allow(
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
#![deny(unsafe_op_in_unsafe_fn)]
#![feature(raw_ref_op)]
pub type E = ::core::ffi::c_uint;
pub const A: E = 0;
pub const true_0: ::core::ffi::c_int = 1 as ::core::ffi::c_int;
#[no_mangle]
pub unsafe extern "C" fn scalar_init() {
    unsafe {
        let mut b: bool = true_0 != 0;
        let mut c: ::core::ffi::c_char = 'c' as i32 as ::core::ffi::c_char;
        let mut i: ::core::ffi::c_int = 42 as ::core::ffi::c_int;
        let mut l: ::core::ffi::c_long = 42 as ::core::ffi::c_long;
        let mut f: ::core::ffi::c_float = 42.0f32;
        let mut d: ::core::ffi::c_double = 42.0f64;
        let mut ld: ::f128::f128 = ::f128::f128::new(42.0);
        let mut e: E = A;
        let mut p: *mut ::core::ffi::c_int = &raw mut i;
    }
}
