c2rust-transpile/tests/snapshots/snapshots__transpile@scalar_init.c.2024.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/scalar_init.2024.rs
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unsafe_op_in_unsafe_fn,
    unused_assignments,
    unused_mut
)]
pub type E = ::core::ffi::c_uint;
pub const A: E = 0;
pub const true_0: ::core::ffi::c_int = 1 as ::core::ffi::c_int;
#[unsafe(no_mangle)]
pub unsafe extern "C" fn scalar_init() {
    let mut b: bool = true_0 != 0;
    let mut c: ::core::ffi::c_char = 'c' as i32 as ::core::ffi::c_char;
    let mut i: ::core::ffi::c_int = 42 as ::core::ffi::c_int;
    let mut l: ::core::ffi::c_long = 42 as ::core::ffi::c_long;
    let mut f: ::core::ffi::c_float = 42.0f32;
    let mut d: ::core::ffi::c_double = 42.0f64;
    let mut ld: ::f128::f128 = ::f128::f128::new(42.0);
    let mut e: E = A;
    let mut p: *mut ::core::ffi::c_int = &raw mut i;
    let mut eb: bool = false;
    let mut ec: ::core::ffi::c_char = 0;
    let mut ei: ::core::ffi::c_int = 0;
    let mut el: ::core::ffi::c_long = 0;
    let mut ef: ::core::ffi::c_float = 0.;
    let mut ed: ::core::ffi::c_double = 0.;
    let mut eld: ::f128::f128 = ::f128::f128::ZERO;
    let mut ep: *mut ::core::ffi::c_int = ::core::ptr::null_mut::<::core::ffi::c_int>();
}
