c2rust-transpile/tests/snapshots/snapshots__transpile@sigign.c.2021.linux.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/os-specific/sigign.2021.linux.rs
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
#![deny(unsafe_op_in_unsafe_fn)]
pub type __sighandler_t = Option<unsafe extern "C" fn(::core::ffi::c_int) -> ()>;
#[no_mangle]
pub unsafe extern "C" fn foo() {
    unsafe {
        let mut handler: Option<unsafe extern "C" fn(::core::ffi::c_int) -> ()> =
            ::core::mem::transmute::<
                ::libc::intptr_t,
                Option<unsafe extern "C" fn(::core::ffi::c_int) -> ()>,
            >(1 as ::core::ffi::c_int as ::libc::intptr_t);
    }
}
